# Organize-Personal-Dataset

./: README.md  nas_track.py
geo-nas-catalog/: Milestones.md  README.md  pyproject.toml  pytest.ini
geo-nas-catalog/.github/workflows/: ci.yml
geo-nas-catalog/cli/: geocli.py
geo-nas-catalog/docs/: README.md  Research_Thinking.md  STYLE_PLOTS.md
geo-nas-catalog/examples/: catalog_walkthrough.ipynb  scan_example.py
geo-nas-catalog/src/catalog/: __init__.py  metadata.py  readme.py  scanner.py  schema.py
geo-nas-catalog/src/catalog/handlers/: __init__.py  base.py  netcdf.py  other.py  tabular.py
geo-nas-catalog/src/ingest/: __init__.py  loaders.py  pipelines.py
geo-nas-catalog/src/plot/: __init__.py  exporters.py  nature_style.py
geo-nas-catalog/src/utils/: __init__.py  config.py  hashing.py  logging.py  parallel.py  paths.py
geo-nas-catalog/tests/: conftest.py  test_catalog_scanner.py  test_ingest_loaders.py  test_plotting.py  test_utils.py
geo-nas-catalog/tests/property/: test_hashing_properties.py
