[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "geo-nas-catalog"
version = "0.1.0"
description = "Catalog and curation toolkit for heterogeneous geoscience datasets on personal NAS."
readme = "README.md"
authors = [
  { name = "GeoNAS Maintainers" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "typer[all]>=0.12",
  "pydantic>=1.10,<3",
  "pandas>=2.1",
  "xarray>=2023.8",
  "netCDF4>=1.6",
  "pyarrow>=14",
  "dask[complete]>=2023.9",
  "fsspec>=2023.6",
  "openpyxl>=3.1",
  "fastparquet>=2023.7",
  "matplotlib>=3.7",
  "cartopy>=0.22",
  "cf_xarray>=0.8",
  "rich>=13.5",
  "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.88",
  "mypy>=1.7",
  "ruff>=0.1.5",
  "types-pyyaml",
  "ipykernel"
]

dynamic = ["classifiers"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "typer[all]>=0.12",
  "pydantic>=1.10,<3",
  "pandas>=2.1",
  "xarray>=2023.8",
  "netCDF4>=1.6",
  "pyarrow>=14",
  "dask[complete]>=2023.9",
  "fsspec>=2023.6",
  "openpyxl>=3.1",
  "fastparquet>=2023.7",
  "matplotlib>=3.7",
  "cartopy>=0.22",
  "cf_xarray>=0.8",
  "rich>=13.5",
  "loguru>=0.7",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.88",
  "mypy>=1.7",
  "ruff>=0.1.5",
  "types-pyyaml",
  "ipykernel"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "TID", "S"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "src"
plugins = []
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
xfail_strict = true
